--- a/package.json
+++ b/package.json
@@ -5,34 +5,45 @@
     "@swc/jest": "^0.2.20",
     "@types/jest": "^27.5.2",
     "@types/jstoxml": "^2.0.2",
-    "@types/supertest": "^2.0.12",
+    "@types/supertest": "^2.0.16",
     "@types/uuid": "^8.3.4",
     "jest": "^27.5.1",
-    "supertest": "^6.2.2",
+    "supertest": "^6.3.4",
     "ts-jest": "^27.1.5",
-    "ts-node": "^10.6.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   },
   "scripts": {
+    "start": "node dist/index.js",
     "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "build": "tsc",
+    "dev": "ts-node src/index.ts"
   },
   "jest": {
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
     "testEnvironment": "node",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "dependencies": {
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.21",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
+    "express": "^4.21.2",
     "jstoxml": "^3.2.3",
     "nodemon": "^2.0.15",
     "reflect-metadata": "^0.1.13",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
+    "umzug": "^3.8.2",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   }
