--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "scripts": {
     "start": "node dist/index.js",
-    "test": "npm run tsc -- --noEmit && jest",
+    "test": "npm run tsc -- --noEmit && jest --runInBand",
     "tsc": "tsc",
     "build": "tsc",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "migrate": "node -r ts-node/register/transpile-only ./src/migrations/config-migrations/migrator-cli.ts"
   },
   "jest": {
     "transform": {
@@ -41,6 +42,7 @@
     "jstoxml": "^3.2.3",
     "nodemon": "^2.0.15",
     "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
     "umzug": "^3.8.2",
